# assured-py

./: .env.example  .gitignore  .pre-commit-config.yaml  API_Divergence.md  Assured Platform API.json  README.md  assured_py_demo.ipynb  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api-divergence.md  getting-started.md  index.md
docs/api/: client.md  credentialing.md  exceptions.md  files.md  payer-enrollment.md  provider-profile.md  providers.md  settings.md  users.md
docs/guides/: authentication.md  file-uploads.md  pagination.md  payer-enrollment.md  smart-helpers.md
src/assured/: __init__.py  client.py  exceptions.py  settings.py
src/assured/models/: __init__.py  common.py  credentialing.py  facilities.py  files.py  hospital_affiliations.py  payer_enrollment.py  practice_locations.py  provider_profile.py  providers.py  tasks.py  tax_entities.py  users.py
src/assured/resources/: __init__.py  account.py  credentialing.py  facilities.py  files.py  hospital_affiliations.py  payer_enrollment.py  practice_locations.py  provider_profile.py  providers.py  tasks.py  tax_entities.py  users.py
tests/: conftest.py  test_credentialing.py  test_files.py  test_providers.py  test_tasks.py  test_users.py
